--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vueuse/core": "^9.13.0",
         "daisyui": "^2.51.3",
+        "pinia": "^2.0.33",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue-router": "4"
