--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.14",
-        "axios": "^1.3.4",
-        "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.21",
-        "tailwindcss": "^3.2.7",
-        "vite": "^4.0.0"
-    },
-    "dependencies": {
-        "@popperjs/core": "^2.11.7",
-        "@vitejs/plugin-vue": "^4.0.0",
-        "@vueuse/core": "^9.13.0",
-        "animate.css": "^4.1.1",
-        "bootstrap": "^5.2.3",
-        "daisyui": "^2.51.3",
-        "feather-icons": "4",
-        "nouislider": "^15.7.0",
-        "pinia": "^2.0.33",
-        "sass": "^1.59.3",
-        "vue": "^3.2.36",
-        "vue-feather": "2",
-        "vue-loader": "^17.0.1",
-        "vue-router": "4"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "docs:dev": "vitepress dev resources/js/",
+    "docs:build": "vitepress build resources/js/",
+    "docs:preview": "vitepress preview resources/js/"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.3.4",
+    "laravel-vite-plugin": "^0.7.2",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "vite": "^4.0.0",
+    "vitepress": "^1.0.0-alpha.64"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vueuse/core": "^9.13.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.2.3",
+    "daisyui": "^2.51.3",
+    "feather-icons": "4",
+    "nouislider": "^15.7.0",
+    "pinia": "^2.0.33",
+    "sass": "^1.59.3",
+    "vue": "^3.2.36",
+    "vue-feather": "2",
+    "vue-loader": "^17.0.1",
+    "vue-router": "4"
+  }
 }
