--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
     "dev": "vite",
     "prod": "run-p type-check build-only",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit",
-    "docs:dev": "NODE_ENV=local vitepress dev docs",
-    "docs:build": "NODE_ENV=producution vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "type-check": "vue-tsc --noEmit"
   },
   "devDependencies": {
     "@rollup/plugin-dynamic-import-vars": "^2.0.3",
@@ -21,7 +18,6 @@
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vite-plugin-static-copy": "^0.13.0",
-    "vitepress": "^1.0.0-alpha.65",
     "vue-tsc": "^1.0.12"
   },
   "dependencies": {
