--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "dev": "vite",
     "prod": "run-p type-check build-only",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "docs:dev": "NODE_ENV=local vitepress dev resources/script/documentation/",
+    "docs:build": "NODE_ENV=production vitepress build resources/script/documentation/",
+    "docs:preview": "vitepress preview resources/script/documentation/"
   },
   "devDependencies": {
     "@rollup/plugin-dynamic-import-vars": "^2.0.3",
@@ -18,6 +21,7 @@
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vite-plugin-static-copy": "^0.13.0",
+    "vitepress": "^1.0.0-alpha.65",
     "vue-tsc": "^1.0.12"
   },
   "dependencies": {
@@ -25,6 +29,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vueuse/core": "^9.13.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "daisyui": "^2.51.3",
     "feather-icons": "4",
@@ -33,10 +38,9 @@
     "sass": "^1.59.3",
     "vue": "^3.2.36",
     "vue-feather": "2",
-    "vue-loader": "^17.0.1",
-    "vue-router": "4",
-    "axios": "^1.2.1",
     "vue-i18n": "^9.2.2",
-    "vue-inline-svg": "^2.1.1"
+    "vue-inline-svg": "^2.1.1",
+    "vue-loader": "^17.0.1",
+    "vue-router": "4"
   }
 }
