--- a/package.json
+++ b/package.json
@@ -2,40 +2,42 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "prod": "run-p type-check build-only",
+        "build": "run-p type-check build-only",
         "build-only": "vite build",
         "type-check": "vue-tsc --noEmit"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.14",
-        "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.21",
-        "vite": "^4.0.0",
         "@rollup/plugin-dynamic-import-vars": "^2.0.3",
         "@types/node": "^18.11.12",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/tsconfig": "^0.1.3",
+        "autoprefixer": "^10.4.14",
+        "laravel-vite-plugin": "^0.7.2",
+        "npm-run-all": "^4.1.5",
+        "postcss": "^8.4.21",
         "typescript": "~4.7.4",
+        "vite": "^4.0.0",
         "vite-plugin-static-copy": "^0.13.0",
-        "vue-tsc": "^1.0.12",
-        "npm-run-all": "^4.1.5"
+        "vue-tsc": "^1.0.12"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.7",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vueuse/core": "^9.13.0",
+        "@vueuse/integrations": "^9.13.0",
         "animate.css": "^4.1.1",
+        "axios": "^1.2.1",
         "bootstrap": "^5.2.3",
         "feather-icons": "4",
         "nouislider": "^15.7.0",
+        "nprogress": "^0.2.0",
         "pinia": "^2.0.33",
         "sass": "^1.59.3",
         "vue": "^3.2.36",
         "vue-feather": "2",
-        "vue-loader": "^17.0.1",
-        "vue-router": "4",
-        "axios": "^1.2.1",
         "vue-i18n": "^9.2.2",
-        "vue-inline-svg": "^2.1.1"
+        "vue-inline-svg": "^2.1.1",
+        "vue-loader": "^17.0.1",
+        "vue-router": "4"
     }
 }
