--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,28 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "resources/script/**/*", "resources/script/**/*.vue"],
-  "compilerOptions": {
-    "noImplicitAny": false,
-    "ignoreDeprecations": "5.0",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./resources/script/*"]
+    "extends": "@vue/tsconfig/tsconfig.web.json",
+    "include": [
+        "env.d.ts",
+        "resources/script/**/*",
+        "resources/script/**/*.vue"
+    ],
+    "compilerOptions": {
+        "noImplicitAny": false,
+        "ignoreDeprecations": "5.0",
+        "baseUrl": ".",
+        "allowJs": true,
+        "paths": {
+            "@/*": [
+                "./resources/script/*"
+            ]
+        },
+        "lib": [
+            "es2018",
+            "dom"
+        ]
     },
-    "lib": [
-      "es2018",
-      "dom"
-  ]
-  },
-
-  "references": [
-    {
-      "path": "./tsconfig.config.json"
-    }
-  ]
+    "references": [
+        {
+            "path": "./tsconfig.config.json"
+        }
+    ]
 }
